--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,10 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +163,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,10 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
@@ -212,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +228,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,22 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Solta'"
+       "'Los Cabos'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[0]"
+    "top_travel_cities[3]"
    ]
   },
   {
@@ -299,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +304,7 @@
        "'Pyeongchang'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +358,7 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +471,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +538,7 @@
        "['Walla Walla Valley']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +565,7 @@
        "['Walla Walla Valley', 'Marakesh']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +603,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +630,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,10 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
@@ -685,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +700,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +740,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +768,7 @@
        "'San Antonio'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +795,7 @@
        "'Walla Walla Valley'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,10 +806,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 4"
@@ -823,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +836,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,10 +854,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 'Walla Walla Valley'"
@@ -880,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +891,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,13 +916,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
+       " 'Solta',\n",
+       " 'Solta',\n",
+       " 'Solta',\n",
+       " 'Solta',\n",
+       " 'Solta']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "top_travel_cities.append('Solta')"
+    "top_travel_cities.append('Solta')\n",
+    "top_travel_cities"
    ]
   },
   {
@@ -951,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -972,14 +989,14 @@
        " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_travel_cities = set(top_travel_cities)\n",
-    "unique_travel_cities"
+    "unique_travel_cities\n"
    ]
   },
   {
@@ -1018,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1026,9 +1043,9 @@
      "evalue": "'set' object does not support indexing",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
      ]
     }
@@ -1046,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1072,7 @@
        "set"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,28 +1128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
+       "{'Albuquerque',\n",
        " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
        " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
        " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Iguazu Falls',\n",
+       " 'Los Cabos',\n",
+       " 'Marakesh',\n",
+       " 'Pyeongchang',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Solta',\n",
+       " 'Toronto',\n",
+       " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1176,7 @@
        "13"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,16 +1187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "18"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,14 +1271,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
